Fix text wrap

--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -20,7 +20,7 @@
 .contents {
     outline: none;
     width: 100%;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .author {
